Squashed commit of the following:
commit 20efc3345836d4e314d118b09dd7907d3d7454e7
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Sat Aug 9 22:47:27 2025 +0800

    UI changes

commit 4f6c9010ade5d091c65b51704d01410922663498
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Sat Aug 9 12:16:34 2025 +0800

    Update UI

commit cb242a06ea00f519a54098998aef31de4fe479e1
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Sat Aug 9 12:05:27 2025 +0800

    Refactor dialog code

commit 15f93cdb5b32e0b0f3c6365925a036ede419ca59
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Sat Aug 9 00:36:09 2025 +0800

    Add key

commit cd05aab3018aa855c85ae9691608781c297ac737
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Sat Aug 9 00:30:24 2025 +0800

    Move task api methods into util

commit b8fb049debbe27724a090fed7913da22ee900139
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Sat Aug 9 00:14:34 2025 +0800

    Move schedules API methods into utils

commit 6615bb48c38c7b1ebee9d14ff6f77a0adbc216ef
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Fri Aug 8 23:28:42 2025 +0800

    Migrate to mantine

commit 0a599ad87311503e8dde6e0883a02244a3b230ec
Author: Nicole <60417365+nicoleang09@users.noreply.github.com>
Date:   Fri Aug 8 23:27:27 2025 +0800

    API fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     -->
   <link rel="manifest" href="/manifest.json" />
 
-  <title>today's dashboard</title>
+  <title>Intent</title>
 
   <script type="module" src="/src/index.tsx"></script>
 </head>
